Update crud blog and auth module

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,10 @@
 PORT=3000
 
-# Database
-NODE_ENV=
+JWT_SECRET=xxx
 
-POSTGRES_HOST=
-POSTGRES_PORT=
-POSTGRES_USERNAME=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_MAX_POOL=
-POSTGRES_MIN_POOL=
-POSTGRES_IDLE_TIMEOUT=
-POSTGRES_ACQUIRE_TIMEOUT=
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=xxxx
+POSTGRES_DB=example
+NODE_ENV=example
