--- a/nx.json
+++ b/nx.json
@@ -36,7 +36,7 @@
       "options": {
         "targetName": "test"
       },
-      "exclude": ["apps/phutran.info-e2e/**/*"]
+      "exclude": ["apps/phutran.info-e2e/**/*", "apps/api-phutran-e2e/**/*"]
     }
   ]
 }
