--- a/apps/api-phutran-e2e/project.json
+++ b/apps/api-phutran-e2e/project.json
@@ -1,17 +1,17 @@
 {
-  "name": "phutran.info-e2e",
+  "name": "api-phutran-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "implicitDependencies": ["phutran.info"],
+  "implicitDependencies": ["api-phutran"],
   "targets": {
     "e2e": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{e2eProjectRoot}"],
       "options": {
-        "jestConfig": "apps/phutran.info-e2e/jest.config.ts",
+        "jestConfig": "apps/api-phutran-e2e/jest.config.ts",
         "passWithNoTests": true
       },
-      "dependsOn": ["phutran.info:build"]
+      "dependsOn": ["api-phutran:build"]
     }
   }
 }
