--- a/nginx.conf
+++ b/nginx.conf
@@ -47,7 +47,7 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
 
         location / {
-            proxy_pass http://localhost:3000;
+            proxy_pass http://api-phutran:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
