--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-  GNU nano 6.2                                                                                                                                             nginx.conf                                                                                                                                                      
+  GNU nano 6.2                                                                                                                                                                           nginx.conf                                                                                                                                                                                    
 user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
@@ -24,13 +24,6 @@ http {
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
-    # HTTP server (redirect to HTTPS)
-    server {
-        listen 80;
-        server_name phutran.info.vn www.phutran.info.vn api.phutran.info.vn;
-        return 301 https://$server_name$request_uri;
-    }
-
     # API Server (NestJS Backend)
     server {
         listen 443 ssl http2;
@@ -47,7 +40,7 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
 
         location / {
-            proxy_pass http://api-phutran:3000;
+            proxy_pass http://localhost:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -90,30 +83,91 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
 
-        # App Shell
-        root /nginx-config/dist/apps/app-shell/browser;  # Added /browser
+        # Load the App Shell first for all requests
+        root /nginx-config/dist/apps/app-shell/browser;
         index index.html;
 
-        # Blog MFE
-        location /blog {
-            alias /nginx-config/dist/apps/blogger/browser;
-            try_files $uri $uri/ /blog/index.html;  # Fixed path
-
-            location ~ \.mjs$ {
-                add_header Content-Type "application/javascript" always;
-                add_header Access-Control-Allow-Origin "*" always;
-            }
+        # Redirect /blog and /admin to /blog/ and /admin/ respectively
+        location = /blog {
+            return 301 /blog/;
         }
 
-        # Admin MFE
-        location /admin {
-            alias /nginx-config/dist/apps/admin/browser;
-            try_files $uri $uri/ /admin/index.html;  # Fixed path
+        location = /admin {
+            return 301 /admin/;
+        }
 
-            location ~ \.mjs$ {
+        # Blog MFE - Load App Shell first, then fetch /blog resources
+        location /blog/ {
+            root /nginx-config/dist/apps/app-shell/browser;
+            index index.html;
+
+            # Blog MFE assets
+            location /blog/assets/ {
+                alias /nginx-config/dist/apps/blogger/browser/assets/;
+            }
+
+            # Blog remoteEntry.js for Module Federation
+            location ~ ^/blog/remoteEntry\.(js|mjs)$ {
+                alias /nginx-config/dist/apps/blogger/browser/remoteEntry.mjs;
                 add_header Content-Type "application/javascript" always;
                 add_header Access-Control-Allow-Origin "*" always;
             }
+
+            # Serve other blog MFE files (chunks, etc)
+            location ~ ^/blog/.*\.(js|mjs)$ {
+                alias /nginx-config/dist/apps/blogger/browser/;
+                try_files $uri =404;
+                add_header Content-Type "application/javascript" always;
+                add_header Access-Control-Allow-Origin "*" always;
+            }
+
+            # Ensure static files have the correct MIME type and CORS headers
+            location ~* \.(css|json|wasm|woff2?|ttf|svg|png|jpg|jpeg|gif|ico|map)$ {
+                alias /nginx-config/dist/apps/blogger/browser/;
+                try_files $uri =404;
+                add_header Access-Control-Allow-Origin "*" always;
+                expires 1h;
+                access_log off;
+            }
+
+            try_files $uri /index.html;
+        }
+
+        # Admin MFE - Load App Shell first, then fetch /admin resources
+        location /admin/ {
+            root /nginx-config/dist/apps/app-shell/browser;
+            index index.html;
+
+            # Admin MFE assets
+            location /admin/assets/ {
+                alias /nginx-config/dist/apps/admin/browser/assets/;
+            }
+
+            # Admin remoteEntry.js for Module Federation
+            location ~ ^/admin/remoteEntry\.(js|mjs)$ {
+                alias /nginx-config/dist/apps/admin/browser/remoteEntry.mjs;
+                add_header Content-Type "application/javascript" always;
+                add_header Access-Control-Allow-Origin "*" always;
+            }
+
+            # Serve other admin MFE files (chunks, etc)
+            location ~ ^/admin/.*\.(js|mjs)$ {
+                alias /nginx-config/dist/apps/admin/browser/;
+                try_files $uri =404;
+                add_header Content-Type "application/javascript" always;
+                add_header Access-Control-Allow-Origin "*" always;
+            }
+
+            # Ensure static files have the correct MIME type and CORS headers
+            location ~* \.(css|json|wasm|woff2?|ttf|svg|png|jpg|jpeg|gif|ico|map)$ {
+                alias /nginx-config/dist/apps/admin/browser/;
+                try_files $uri =404;
+                add_header Access-Control-Allow-Origin "*" always;
+                expires 1h;
+                access_log off;
+            }
+
+            try_files $uri /index.html;
         }
 
         # Root route
@@ -121,8 +175,12 @@ http {
             try_files $uri $uri/ /index.html;
         }
     }
+
+    # HTTP server (redirect to HTTPS)
+    server {
+        listen 80;
+        server_name phutran.info.vn www.phutran.info.vn api.phutran.info.vn;
+        return 301 https://$server_name$request_uri;
+    }
 }
-
-
-
 
