--- a/nginx.conf
+++ b/nginx.conf
@@ -29,6 +29,10 @@ http {
         listen 443 ssl http2;
         server_name api.phutran.info.vn;
 
+        # Add debug log
+        access_log /var/log/nginx/api_access.log;
+        error_log /var/log/nginx/api_error.log debug;
+
         # SSL certificates
         ssl_certificate /etc/letsencrypt/live/phutran.info.vn/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/phutran.info.vn/privkey.pem;
@@ -40,6 +44,9 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
 
         location / {
+            # Add debug header to verify this block is hit
+            add_header X-Debug-Server "api-server" always;
+            
             proxy_pass http://localhost:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
