--- a/nginx.conf
+++ b/nginx.conf
@@ -53,7 +53,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Remove ALL CORS headers that might be set by Nginx
+            # Remove any existing CORS headers to prevent duplicates
             proxy_hide_header 'Access-Control-Allow-Origin';
             proxy_hide_header 'Access-Control-Allow-Methods';
             proxy_hide_header 'Access-Control-Allow-Headers';
