--- a/nginx.conf
+++ b/nginx.conf
@@ -53,13 +53,18 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Remove any existing CORS headers to prevent duplicates
+            # Remove any existing CORS headers
             proxy_hide_header 'Access-Control-Allow-Origin';
             proxy_hide_header 'Access-Control-Allow-Methods';
             proxy_hide_header 'Access-Control-Allow-Headers';
             proxy_hide_header 'Access-Control-Expose-Headers';
             proxy_hide_header 'Access-Control-Allow-Credentials';
             proxy_hide_header 'Access-Control-Max-Age';
+
+            # Handle preflight
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
         }
     }
 
